# ChangeLog for dev-util/qt-creator
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

 *qt-creator-1.0.0 (03 Mar 2009)

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Apply translations code on live ebuild

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild:
  Fixing translation once again

  26 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild, qt-creator-9999.ebuild, metadata.xml:
  Fix translations installation, fix share path definition, fix
  documentation
  installation, add more plugin use flags, clean up

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-creator-1.2.0.ebuild:
  Fix menu icon

*qt-creator-1.2.0 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-creator-1.2.0.ebuild:
  Version bump to 1.2.0. Masking for further testing

  23 Jun 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Sync with portage. Introduce kde use flag. bug 270188

  12 May 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Update git repository link

  23 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Fix library installation (again) due to upstream changes

  23 Apr 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  -qt-creator-1.1.0_rc1.ebuild:
  1.1.0 in tree

*qt-creator-1.1.0_rc1 (10 Apr 2009)

  10 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-creator-1.1.0_rc1.ebuild:
  Adding shiny new qt-creator-1.1.0_rc1

  03 Apr 2009; Markos Chandras <hwoarang@gentoo.org> qt-creator-9999.ebuild:
  Install qtcreator.bin

  24 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -files/add_missing_plugins.patch, -qt-creator-1.0.0-r1.ebuild:
  On tree now

  23 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  files/add_missing_plugins.patch:
  Dropping obsolete rules from plugins.pro. Unmasking

  22 Mar 2009; Markos Chandras <hwoarang@gentoo.org>