@@ -1,6 +1,6 @@
 AUX docs_gen.patch 603 RMD160 9711ddb1c59e8ddd1ad17ba34f89c8e4c89b4504 SHA1 83cd745baabd1545a1079c59edef6279b254074a SHA256 7428155e6f09201d60f308c3934153aa5fa5b25296a96d86dad80354dc8e3b93
 DIST qt-creator-1.2.0-src.zip 8636682 RMD160 0b32dcd979e8384461389515de10eacf0141bbdc SHA1 781f0effa5ba7ad19efde0745e42e192e9fa88d4 SHA256 c13001cd1fe939cc71c60f6ac506b79143b44cc40954469a6fa269d107176feb
-EBUILD qt-creator-1.2.0.ebuild 3018 RMD160 3e56c673986ae255614aba29dcae8d613de388f3 SHA1 089152dffd027bfed00a9dbf9051cbf7acfe12bb SHA256 7033cb8eb21a9ba64b3d955254d8d74a2158ac37b46b456929b77dc73d887ee5
-EBUILD qt-creator-9999.ebuild 3006 RMD160 c8a53e72e3d04f08aaee77abbd3ebd0b1a663374 SHA1 7084886c663c11a8a88de04ac092a2bb67a68416 SHA256 fdc5397693349353210e2b68677c051b8a90a108868067337dc833636a62e407
-MISC ChangeLog 6983 RMD160 33f92f599a4e46f071eb5bab066b9388fd5288b5 SHA1 8c1f6a0c12fc279f091c1323e8cbfeb43c2ab633 SHA256 24b930df47ada003832db38315ff1c9def57a6274427f6b00e5e1aed11278bf1
-MISC metadata.xml 901 RMD160 0b77d2e029b7267e8486c547cc5ded0a3b88da7b SHA1 e260d7c7830baa60cf6fffa569da340bafcd42f1 SHA256 aab4c016cb911d5209f92e901b9533c520f187b9f1abbda2aee79ef9827496e3
+EBUILD qt-creator-1.2.0.ebuild 3012 RMD160 71b5d1b43ca49756f7b846980331902b93d014dc SHA1 85259d87b3af3f6efe50bd49a22ebb9902c6ab97 SHA256 c9392cc584035461686d867eb5d74b55f69ee6a825a4a96bac8fdd19e645b1d5
+EBUILD qt-creator-9999.ebuild 2921 RMD160 94eee00a752f630c8d0f29a75054b2a8ee1dd5fe SHA1 f2177ca1f0b8260b60119a4092eace12bdea4154 SHA256 7904b8ac03540ccfa823424d76f46c0bce1bc60c9cebe61b4e758ff127b8e184
+MISC ChangeLog 7138 RMD160 4acf504c8b2756ed2ee9595c75f3f95873ff3fc7 SHA1 dd48d71d4da1f3b4bb9eda69ab1c5345cd437c7f SHA256 b3d6337e3654192777a493c26d4cc2bcdc75852afcf76fc4e878b868f1ae4357
+MISC metadata.xml 895 RMD160 8801ac01fc39baecabe094b64ba41a6a5c7c597f SHA1 e7b045c7ba1bec8eced17bbe88fc25eae5777bbe SHA256 4d5ebb9d910fb447d8082a845269c1cfca0f3891b7acfe50a7f27e124501eddb
